# sdlc_agent

./: README.md
review_agent/: .env.example  .gitignore  README.md  pyproject.toml  sitecustomize.py
review_agent/.github/workflows/: tests.yml
review_agent/review_agent/: __init__.py  analyzers.py  cli.py  config.py  context_ingestion.py  manifest_resolver.py  models.py  orchestrator.py  patch_parser.py  prompting.py  react_loop.py  report_renderer.py  review_cache.py
review_agent/review_agent/adapters/: __init__.py  cxxtract.py  gitlab.py  llm.py
review_agent/review_agent/application/: __init__.py  pipeline.py
review_agent/review_agent/domain/: __init__.py  location_mapper.py  policy.py
review_agent/review_agent/skills/: __init__.py  catalog.yaml  registry.py  skill_architecture_risk.py  skill_cross_repo_breakage.py  skill_evidence_read.py  skill_patch_intake.py  skill_symbol_impact.py
review_agent/review_agent/testing/: __init__.py  fakes.py
review_agent/review_agent/tool_clients/: __init__.py  cxxtract_http_client.py  gitlab_client.py  mcp_adapter.py
review_agent/tests/: test_analyzers.py  test_cli_e2e.py  test_context_ingestion.py  test_hardening.py  test_manifest_resolver.py  test_orchestrator_agentic.py  test_patch_parser.py  test_react_loop.py  test_skills_registry.py  test_tool_client_contracts.py
