[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cxxtract-review-agent"
version = "0.3.1"
description = "Standalone semantic C++ PR review agent powered by CXXtract2."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-ai-slim[openai]>=1.63.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
review-agent = "review_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["review_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
